# seniorrx-monitor

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  LICENSE  Makefile  README.md  README.pt-BR.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: clinical_criterion.md  feature_request.md
.github/workflows/: ci.yml  model-monitoring.yml  seniorrx-monitor-ci.yml
configs/: mlops.md  settings.yaml
data/: README.md
docs/: DEEP_DIVE.md  DEEP_DIVE.pt-BR.md  architecture.md  beers_criteria.md  clinical_validation.md  database_schema.md  interview_talking_points.md  methodology.md  references.md  roadmap.md
notebooks/: 01_exploratory_analysis.ipynb
r/: install_packages.R
reports/: README.md
scripts/: etl_pipeline.py  gen_secrets.sh  generate_synthetic_data.py  init_db.py
seniorrx-monitor/: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  pyproject.toml
seniorrx-monitor/.github/ISSUE_TEMPLATE/: bug_report.md
seniorrx-monitor/.github/workflows/: ci.yml  model-monitoring.yml
seniorrx-monitor/configs/: logging.yaml  mlops.md
seniorrx-monitor/docs/: architecture.md  clinical_validation.md  initial_issues.md  linkedin_pitch.md  references.md  roadmap.md
seniorrx-monitor/references/: beers_criteria_2023_summary.md
seniorrx-monitor/reports/: README.md
seniorrx-monitor/reports/quarto/: clinical_report.qmd
seniorrx-monitor/scripts/: build_training_set.py  run_pipeline.sh
seniorrx-monitor/sql/: seed_beers_pim.sql
seniorrx-monitor/src/seniorrx/application/services/: __init__.py  risk_scoring_service.py
seniorrx-monitor/src/seniorrx/domain/: value_objects.py
seniorrx-monitor/src/seniorrx/domain/rules/: interaction_rules.py
seniorrx-monitor/src/seniorrx/infrastructure/db/: database.py  models.py  repositories.py
seniorrx-monitor/src/seniorrx/infrastructure/ml/: features.py
seniorrx-monitor/src/seniorrx/interface/api/routers/: alerts.py  patients.py  prescriptions.py
seniorrx-monitor/tests/: conftest.py
seniorrx-monitor/tests/integration/: conftest.py
seniorrx-monitor/tests/unit/: test_risk_scoring_service.py
sql/: schema.sql
sql/migrations/: README.md
src/medstock_optimizer/: __init__.py  alerts.py  config.py  data.py  forecasting.py  inventory.py  reporting.py  simulation.py
src/seniorrx/: __init__.py
tests/: test_forecasting.py  test_inventory.py  test_pipeline.py
tests/integration/: test_api.py
tests/unit/: test_beers_rules.py  test_interaction_rules.py  test_polypharmacy_rules.py  test_security.py
(+11 files in other folders)
