[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medstock-optimizer"
version = "0.1.0"
description = "Hospital pharmacy inventory forecasting, replenishment simulation and automated reporting."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Healthtech Portfolio" }]
dependencies = [
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

